2013-03-04  Cedric Bail

        * Evas: fix crash with Buffer engine with non alpha output.

2013-03-30  Cedric Bail

	* Evil: Add mkdtemp.

2013-03-29  Carsten Haitzler (The Rasterman)

        * Fix edje entry to resepct filter callbacks and not clear
        selections if filters filter out all contents.

2013-03-28  Cedric Bail

	* Ecore: automatically turn on Systemd watchdog in Ecore main loop.

2013-03-28  Carsten Haitzler (The Rasterman)

        * Change evas_textblock_cursor_word_start() and
        evas_textblock_cursor_word_end() to walk extra whitespaces when
        moving up and down words that tends to look more like other
        toolkits (gtk, qt). the docs dont specifically say the rules
        on word finding, so being consistent is better i believe and
        so we can assume the prior behavior is a bug.

2013-03-27  Cedric Bail

	* Eina: Add eina_log_timing.
	* Ecore, Ecore_Audio, Ecore_Con, Ecore_Evas,
	Edje, Eet, Eio, Eo, Evas: use eina_log_timing.

2013-03-27  Jihoon Kim

	* Add ecore_imf_context_input_panel_variation_set/get API.
	* Add edje_object_part_text_input_panel_layout_variation_set/get API.

2013-03-25  Cedric Bail

	* Eina: add portable eina_file_mkstemp().
	* Embryo: use eina_file_mkstemp().

2013-03-22  Jiyoun Park (Jypark)

	* Ecore_x: fix alpha set function not clear sync counter

2013-03-22  Cedric Bail

	* Edje: Add spread width and height in TABLE part.

2013-03-20  Jérémy Zurcher (jeyzu)

        * Eina: Add eina_list_shuffle

2013-03-19  Mike Blumenkrantz

        * Fix magic failure in eina_value_array_count when array has not been allocated

2013-03-16  Cedric Bail

	* Remove Glew and Direct3d code from Ecore_Evas module.
	* Add Eina_Log integration for Systemd journal.

2013-03-15  Carsten Haitzler (The Rasterman)

        * Fix opengl-es 2.0 engine support to only use GL_UNPACK_ROW_LENGTH
        if the correct gles extension exists.

2013-03-14  Mike Blumenkrantz
