@@ -220,3 +220,4 @@ Fixes:
     * Fix evas word start/end find in textblock to be consistent with other toolkit logic on the matter
     * Fix edje entry to respect filters and if input filtered out, don't clear selections
     * Fix evas buffer engine allocation with non alpha output
+    * Evas font: click on left/right half of char does matter now.
